<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC-Staffellauf</string>
    <string name="menu_players">Spielerverwaltung</string>
    <string name="main_functions">Funktionen:</string>
    <string name="start">Start</string>
    <string name="finish">Ziel</string>
    <string name="race">Lauf</string>
    <string name="label_playercount">Anzahl Spieler</string>
    <string name="label_token">Token</string>
    <string name="label_notoken">(nicht vorhanden)</string>
    <string name="start_race">Lauf starten</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_race">RaceActivity</string>
    <string name="label_playernum">Startnummer</string>
    <string name="label_playerkey">Schlüssel</string>
    <string name="label_status">Status</string>
    <string name="label_token_recv">Empfangen</string>
    <string name="label_token_sent">Zu senden</string>
    <string name="label_waiting">Warte auf Token</string>
    <string name="label_current">Token empfangen</string>
    <string name="label_sent">Token gesendet</string>
    <string name="list_add">Hinzufügen</string>
    <string name="list_remove">Entfernen</string>
    <string name="label_keynum">Schlüssel %1$d</string>
    <string name="label_expected">Erwartet</string>
    <string name="label_ident">Übereinstimmung</string>
    <string name="label_no">nein</string>
    <string name="label_yes">ja</string>

</resources>