<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="10dp"
    android:orientation="vertical"
    android:padding="@dimen/margin_around"
    android:keepScreenOn="true"
    android:showDividers="middle" >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="onStartClick"
        android:text="@string/start" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="onRaceClick"
        android:text="@string/race" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onFinishClick"
        android:text="@string/finish" />

</LinearLayout>