<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_around"
    android:keepScreenOn="true"
    tools:context=".FinishActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/label_token"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/finish_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/label_notoken"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/label_token_recv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/finish_recv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/label_notoken"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/label_expected"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/finish_expect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/label_notoken"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/label_ident"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/finish_ident"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/label_no"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/label_not_ident"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>